...
            android:hint="Title here"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Note here"
            android:padding="8dp"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:lines="13"
            android:gravity="top"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveBtn"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/light_brown"
        android:src="@drawable/ic_save"
        android:textColor="@color/black"
...
